# frappe-api

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: deploy-docs.yml  publish-to-pypi.yml
docs/: index.md  openapi_docs.md  roadmap.md  usage_examples.md
frappeapi/: __init__.py  applications.py  datastructures.py  encoders.py  exception_handler.py  exceptions.py  models.py  params.py  responses.py  routing.py  utils.py
openapi_docs/: index.html
roadmap/: index.html
search/: search_index.json
usage_examples/: index.html
