[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "frappeapi"
dynamic = ["version"]
description = "FrappeAPI, FastAPI for Frappe Framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Muhammad Saif", email = "muhamed.e.saif@gmail.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "pydantic==2.6.4,<3.0.0",
    "typing-extensions>=4.12.2",
    "Werkzeug>=2.3.8",
    "fastapi~=0.115.2",
    # For forms and file uploads
    "python-multipart >=0.0.7",
]
[project.optional-dependencies]
dev = [
    "ruff>=0.2.2",
    "pytest==8.2.2",
    "pre-commit>=3.6.0",
    "pytest==8.2.2"
]


[tool.ruff]
target-version = "py310"
line-length = 120
show-fixes = true


[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", "W", # pycodestyle (PEP 8) E for error, W for warning
    "I", # flake8-isort
    # "B", # flake8-bugbear https://github.com/PyCQA/flake8-bugbear#list-of-warnings
    "N", # PEP8 Naming Conventions, fixable
    # "S", # flake8-bandit for Security checks, fixable
    "T20", # flake8-print for checking for print statements, fixable
    "PT", # flake8-pytest-style for checking for pytest best practices, fixable
    "Q", # flake8-quotes for checking for consistent quotes, fixable
    "TID", # flake8-tidy-imports: Checks for banned imports, fixable*
    "SIM", # flake8-simplify: Checks for simplified code, fixable*,
    "DTZ", # flake8-datetimez for checking for timezone issues, not fixable
    "C90", # flake8-complexity: The McCabe complexity of a block of code is too high
]
ignore = [
    "PT004",
    "B012", # bugbear: jump-statements in finally block
    "N818", # PEP8 Naming Conventions: Exception name should be named with 'Error' suffix
    "N999", # PEP8 Naming Conventions: Invalid module name
    "TID252", # flake8-tidy-imports: Prefer absolute imports over relative imports from parent modules
    # --- formatter-linter compatibility, avoid conflicting rules: ---
    "W191",
    "E111",
    "E114",
    "E117",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
]
# Overtime we should reduce this number.
mccabe.max-complexity = 15


[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
indent-style = "tab"


[tool.ruff.lint.isort]
combine-as-imports = true

[project.urls]
Homepage = "https://github.com/0xsirsaif/frappe-api"
Documentation = "https://github.com/0xsirsaif/frappe-api"
Repository = "https://github.com/0xsirsaif/frappe-api"
